add list robot function
